--- a/css/main.css
+++ b/css/main.css
@@ -17,21 +17,21 @@ body, html {
 
 /* Background Images */
 .bgimg-1 {
-  background-image: url('../images/bgimg-3.png');
+  background-image: url('../images/bgimg-3.jpg');
   min-height: 100%;
   opacity: 0.85;
   filter: brightness(75%);
 }
 
 .bgimg-2 {
-  background-image: url("../images/bgimg-2.png");
+  background-image: url("../images/bgimg-2.jpg");
   min-height: 800px;
   opacity: 0.75;
   filter: brightness(75%);
 }
 
 .bgimg-3 {
-  background-image: url("../images/bgimg-1.png");
+  background-image: url("../images/bgimg-1.jpg");
   min-height: 100%;
   opacity: 0.75;
   filter: brightness(75%);
@@ -51,6 +51,7 @@ body, html {
   49%{opacity: 0}
   50% {opacity: 1}
 }
+
 blink{animation: blink 1s infinite;}
 
 .infobox-1, .infobox-2 {
