--- a/css/main.css
+++ b/css/main.css
@@ -91,21 +91,22 @@ blink{animation: blink 1s infinite;}
   z-index: 1;
 }
 .navbar{
-  padding: 5px;
-  width: 100%;
-  overflow: hidden;
-  white-space: nowrap;
-}
-.navitem{
-  padding: 8px 16px;
   float: left;
   width: auto;
   border: none;
   display: block;
   outline: 0;
+  overflow: hidden;
+}
+.navitem{
+  padding: 8px 16px;
+  width: 100%;
+  border: none;
+  white-space: normal;
+  outline: 0;
 }
 .navbutton{
-  vertical-align: middle;
+  border: none;
   overflow: hidden;
   text-decoration: none;
   color: inherit;
@@ -113,6 +114,28 @@ blink{animation: blink 1s infinite;}
   text-align: center;
   cursor: pointer;
   -moz-user-select: none;
+}
+.navbarscroll{
+  float: left;
+  width: auto;
+  border: none;
+  display: block;
+  outline: 0;
+  overflow: hidden;
+  background-color: white;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+  position: relative;
+  animation: animatetop 0.4s;
+}
+@keyframes animatetop {
+  from{
+    top: -300px;
+    opacity: 0;
+  }
+  to{
+    top: 0;
+    opacity: 1;
+  }
 }
 a:hover{
   background-color: rgba(0,0,0,0.25);
