--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-
 /* Body Style */
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
 body, html {
@@ -92,32 +91,28 @@ blink{animation: blink 1s infinite;}
 }
 .navbar{
   float: left;
-  width: auto;
+  width: 100%;
   border: none;
   display: block;
   outline: 0;
   overflow: hidden;
 }
-.navitem{
+.navbutton {
   padding: 8px 16px;
   width: 100%;
   border: none;
   white-space: normal;
   outline: 0;
-}
-.navbutton{
-  border: none;
   overflow: hidden;
   text-decoration: none;
   color: inherit;
   background-color: inherit;
   text-align: center;
   cursor: pointer;
-  -moz-user-select: none;
 }
 .navbarscroll{
   float: left;
-  width: auto;
+  width: 100%;
   border: none;
   display: block;
   outline: 0;
