--- a/css/main.css
+++ b/css/main.css
@@ -133,6 +133,15 @@ blink{animation: blink 1s infinite;}
     opacity: 1;
   }
 }
+.navbarsmall{
+  width: 100%;
+  min-width: 100%;
+  text-align: left;
+  padding: 8px 16px;
+}
+.smallshow{
+  display: block;
+}
 a:hover{
   background-color: rgba(255,255,255,0.25);
   color: black;
