--- a/css/main.css
+++ b/css/main.css
@@ -164,3 +164,29 @@ a:hover{
   background-color: rgba(255,255,255,0.25);
   color: black;
 }
+
+
+
+
+/* Content Div Styling */
+.about{
+  background-color: rgba(255,255,255,1);
+  brightness: 75%;
+  height: 100%;
+  width: 100%;
+  color: black;
+}
+.youtube{
+  background-color: rgba(50,50,50,1);
+  brightness: 75%;
+  height: 100%;
+  width: 100%;
+  color: white;
+}
+.twitch{
+  background-color: rgba(100,65,164,1);
+  brightness: 75%;
+  height: 100%;
+  width: 100%;
+  color: white;
+}
