--- a/css/main.css
+++ b/css/main.css
@@ -90,13 +90,15 @@ blink{animation: blink 1s infinite;}
   z-index: 1;
 }
 .navbar{
-  padding: 8px 16px;
+  padding: 8px 4px;
   float: left;
   width: 100%;
   border: none;
   display: block;
   outline: 0;
   overflow: hidden;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 .navbutton {
@@ -113,15 +115,33 @@ blink{animation: blink 1s infinite;}
 }
 .navmobilebutton{
   float: right;
+  padding: 0px 16px;
+}
+.navmobilemenu{
+  padding: 8px 0px;
+  width: 100%;
+  border: none;
+  white-space: normal;
+  outline: 0;
+  overflow: hidden;
+  text-decoration: none;
+  color: rgba(100,100,100,1);
+  text-align: center;
+  vertical-align: middle;
+  background-color: white;
+  display: inline-block;
 }
 .navbarscroll{
-  padding: 8px 16px;
+  padding: 8px 4px;
   float: left;
   width: 100%;
   border: none;
   display: block;
   outline: 0;
   overflow: hidden;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   background-color: rgba(0,0,0,0.75);
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
   position: relative;
