--- a/css/main.css
+++ b/css/main.css
@@ -211,3 +211,25 @@ a:hover{
   width: 100%;
   color: white;
 }
+
+
+/* About Me Section */
+.aboutContainer{
+  display: block;
+  margin: 32px;
+  height: auto;
+  max-width: 100%;
+  padding: 24px;
+  border: none;
+  overflow: hidden;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.aboutMe{
+  display: inline-block;
+  float: left;
+  padding: 8px;
+  text-align: center;
+}
