--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body, html {
 }
 
 /* Parallax Effect */
-.bgimg-1, .bgimg-2, .bgimg-3 {
+.bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4 {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -28,14 +28,21 @@ body, html {
 .bgimg-2 {
   background-image: url("../images/bgimg-2.jpg");
   min-height: 800px;
-  opacity: 0.75;
+  opacity: 0.85;
   filter: brightness(75%);
 }
 
 .bgimg-3 {
   background-image: url("../images/bgimg-1.jpg");
   min-height: 100%;
-  opacity: 0.75;
+  opacity: 0.85;
+  filter: brightness(75%);
+}
+
+.bgimg-4 {
+  background-image: url("../images/bgimg-4.jpg");
+  min-height: 100%;
+  opacity: 0.85;
   filter: brightness(75%);
 }
 
@@ -216,20 +223,40 @@ a:hover{
 /* About Me Section */
 .aboutContainer{
   display: block;
-  margin: 32px;
-  height: auto;
-  max-width: 100%;
-  padding: 24px;
-  border: none;
-  overflow: hidden;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+  max-width: 980px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 64px;
+  padding-bottom: 64px;
+  padding: 16px;
+  box-sizing: inherit;
 }
 
 .aboutMe{
-  display: inline-block;
-  float: left;
-  padding: 8px;
+  display: block;
   text-align: center;
+  font-weight: 400;
+  margin: 10px 0;
+  font-size: 24px;
+  box-sizing: inherit;
+  color: #777;
+}
+.aboutMeRow{
+  width: 49.99999%;
+  padding: 12px 24px;
+  text-align: center;
+  float: left;
+  display: box;
+  box-sizing: inherit;
+  color: #777
+}
+.aboutMeImage{
+  opacity: 0.85;
+  border-radius: 4px;
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
+  border-style: none;
+  box-sizing: inherit;
+  text-align: center
 }
